--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,16 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<title>chitter | login</title>
 <link rel="stylesheet" href="/components/style.css">
-<title>chitter login</title>
+<script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 <body>
-<h1>chitter</h1>
-<a href="/auth/discord">
-  <button>login with discord</button>
-</a>
+<div class="login-container">
+  <h1>chitter</h1>
+  <a href="https://api.chitter.unboundlabs.dev/login/discord" class="discord-login-btn">
+    <i class="fab fa-discord"></i> login with discord
+  </a>
+</div>
 </body>
 </html>
