--- a/public/app/home.html
+++ b/public/app/home.html
@@ -1,33 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>chitter | home</title>
-<link rel="stylesheet" href="/components/style.css">
-<script src="/components/main.js" defer></script>
-<script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+  <meta charset="UTF-8">
+  <title>chitter home</title>
+  <link rel="stylesheet" href="/components/style.css">
+  <script type="module" src="/components/app.js" defer></script>
+  <script type="module" src="/components/friends.js" defer></script>
+  <script type="module" src="/components/servers.js" defer></script>
 </head>
 <body>
-<div class="app-container">
-  <aside class="sidebar">
-    <div class="user-info">
-      <span id="username">username</span>
-      <i class="fas fa-cog"></i>
-    </div>
-    <div class="servers">
-      <h3>servers</h3>
-      <ul id="server-list"></ul>
-      <button id="create-server"><i class="fas fa-plus"></i> new server</button>
-    </div>
-    <div class="friends">
+  <header>
+    <h2>chitter dashboard</h2>
+    <span id="username"></span>
+  </header>
+  <main>
+    <section class="friends-panel">
       <h3>friends</h3>
-      <ul id="friend-list"></ul>
-      <button id="add-friend"><i class="fas fa-user-plus"></i></button>
-    </div>
-  </aside>
-  <main class="content">
-    <h2>select a server or friend to start chatting</h2>
+      <ul id="friends-list"></ul>
+      <input id="friend-add-input" placeholder="friend id">
+      <button id="friend-add-btn">add friend</button>
+    </section>
+
+    <section class="servers-panel">
+      <h3>servers</h3>
+      <ul id="servers-list"></ul>
+      <input id="server-name-input" placeholder="server name">
+      <button id="server-create-btn">create server</button>
+      <input id="invite-code-input" placeholder="invite code">
+      <button id="server-join-btn">join server</button>
+    </section>
   </main>
-</div>
 </body>
 </html>
