--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>chitter | login</title>
-<link rel="stylesheet" href="/components/style.css">
-<script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+  <meta charset="UTF-8">
+  <title>chitter login</title>
+  <link rel="stylesheet" href="/components/style.css">
+  <script type="module" src="/components/app.js" defer></script>
 </head>
 <body>
-<div class="login-container">
-  <h1>chitter</h1>
-  <a href="https://api.chitter.unboundlabs.dev/login/discord" class="discord-login-btn">
-    <i class="fab fa-discord"></i> login with discord
-  </a>
-</div>
+  <div class="login-container">
+    <h1>chitter</h1>
+    <a class="login-btn" href="https://api.chitter.unboundlabs.dev/auth/discord">
+      <i class="fa-brands fa-discord"></i> login with discord
+    </a>
+  </div>
 </body>
 </html>
