Point frontend to new chitterapi host
Update frontend to use https://chitterapi.unboundlabs.dev instead of https://api.chitter.unboundlabs.dev (updated API fetch calls in public/components/app.js and public/components/main.js, and the Discord auth link in public/index.html). Also remove .env from .gitignore so a plain .env file will no longer be ignored (environment-specific .env.* files remain ignored).

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="login-container">
     <h1>chitter</h1>
-    <a class="login-btn" href="https://api.chitter.unboundlabs.dev/auth/discord">
+    <a class="login-btn" href="https://chitterapi.unboundlabs.dev/auth/discord">
       <i class="fa-brands fa-discord"></i> login with discord
     </a>
   </div>
