--- a/public/index.html
+++ b/public/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>chitter login</title>
-  <link rel="stylesheet" href="/components/style.css">
-  <script type="module" src="/components/app.js" defer></script>
+  <link rel="stylesheet" href="./components/style.css">
 </head>
 <body>
-  <div class="login-container">
+  <div class="container">
     <h1>chitter</h1>
-    <a class="login-btn" href="https://chitterapi.unboundlabs.dev/auth/discord">
-      <i class="fa-brands fa-discord"></i> login with discord
+    <a href="https://chitterapi.unboundlabs.dev/auth/discord/callback">
+      <button>login with discord</button>
     </a>
   </div>
 </body>
