Point Discord login link to auth route
Update the login button URL in public/index.html to use /auth/discord instead of /auth/discord/callback. This corrects the link to the OAuth initiation endpoint so the Discord login flow starts properly.

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container">
     <h1>chitter</h1>
-    <a href="https://chitterapi.unboundlabs.dev/auth/discord/callback">
+    <a href="https://chitterapi.unboundlabs.dev/auth/discord">
       <button>login with discord</button>
     </a>
   </div>
