--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>chitter login</title>
-  <link rel="stylesheet" href="./components/style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>chitter</title>
+<link rel="stylesheet" href="/components/style.css">
+<script type="module" src="/components/main.js" defer></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
-  <div class="container">
+<div class="container">
     <h1>chitter</h1>
-    <a href="https://chitterapi.unboundlabs.dev/auth/discord">
-      <button>login with discord</button>
+    <a href="https://chitterapi.unboundlabs.dev/auth/discord" class="discord-btn">
+        <i class="fab fa-discord"></i> login with discord
     </a>
-  </div>
+</div>
 </body>
 </html>
