--- a/public/app/messages.html
+++ b/public/app/messages.html
@@ -2,18 +2,20 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>chitter | messages</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>chitter - messages</title>
 <link rel="stylesheet" href="/components/style.css">
-<script src="/components/messages.js" defer></script>
-<script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+<script type="module" src="/components/main.js" defer></script>
 </head>
 <body>
-<div class="app-container chat-area">
-  <div id="chat-messages" class="chat-messages"></div>
-  <div class="chat-input">
-    <input type="text" id="chat-input" placeholder="type a message">
-    <button id="send-btn">send</button>
-  </div>
+<div class="messages-page">
+    <aside class="sidebar">
+        <ul id="friends-list"></ul>
+    </aside>
+    <main class="chat">
+        <div id="chat-window"></div>
+        <input type="text" id="chat-input" placeholder="Type a message..." />
+    </main>
 </div>
 </body>
 </html>
