--- a/public/index.html
+++ b/public/index.html
@@ -3,17 +3,13 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>chitter</title>
+<title>chitter - login</title>
 <link rel="stylesheet" href="/components/style.css">
-<script type="module" src="/components/main.js" defer></script>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
-<div class="container">
+<div class="login-page">
     <h1>chitter</h1>
-    <a href="https://chitterapi.unboundlabs.dev/auth/discord" class="discord-btn">
-        <i class="fab fa-discord"></i> login with discord
-    </a>
+    <a class="btn" href="https://chitterapi.unboundlabs.dev/auth/discord"><i class="fab fa-discord"></i> login with discord</a>
 </div>
 </body>
 </html>
