--- a/public/app/home.html
+++ b/public/app/home.html
@@ -6,22 +6,21 @@
 <title>chitter - home</title>
 <link rel="stylesheet" href="/components/style.css">
 <script type="module" src="/components/main.js" defer></script>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
 <div class="dashboard">
     <aside class="sidebar">
         <h2>friends</h2>
         <ul id="friends-list"></ul>
+
+        <h2>friend requests</h2>
+        <ul id="friend-requests"></ul>
+
         <h2>servers</h2>
         <ul id="servers-list"></ul>
     </aside>
     <main class="content">
-        <h1>welcome, <span id="username"></span></h1>
-        <div id="friend-requests-container">
-            <h3>friend requests</h3>
-            <ul id="friend-requests"></ul>
-        </div>
+        <h1>Welcome, <span id="username"></span></h1>
     </main>
 </div>
 </body>
