Update login page to use dedicated assets
Switch the login page to use login-specific styling and script. Updated the document title to "login - chitter", replaced /components/css/main.css with /components/css/login.css and /components/js/main.js with /components/js/login.js. Changed layout markup: .landing-container -> .login-container, heading to "login", removed the intro paragraph, and replaced the login anchor with a button (#discord-login) for client-side handling.

--- a/public/login.html
+++ b/public/login.html
@@ -3,15 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>chitter</title>
-<link rel="stylesheet" href="/components/css/main.css">
+<title>login - chitter</title>
+<link rel="stylesheet" href="/components/css/login.css">
 </head>
 <body>
-<div class="landing-container">
-    <h1>chitter</h1>
-    <p>chat with friends, servers, and more</p>
-    <a class="btn" href="/login">login with discord</a>
+<div class="login-container">
+    <h1>login</h1>
+    <button id="discord-login" class="btn">login with discord</button>
 </div>
-<script src="/components/js/main.js" type="module"></script>
+<script type="module" src="/components/js/login.js"></script>
 </body>
 </html>
