Refactor auth, routes, and API endpoints
Introduce a centralized client auth state and route guards (initializeAuth, guardRoute, getAuthState, onAuthChange) and simplify navigation helpers. Update apiFetch to include credentials, support protected requests, and handle 401 by invalidating auth; add logout flow. Rename and normalize API endpoints and payloads (/friend -> /friends, /message -> /messages, /servers/*) and add data normalization helpers for users, friends, servers and messages. Update UI scripts to use new routes (/home, /login, /server), improve error handling, disable/enable composer, and tidy DOM logic. Change server static routing to serve the public directory, add sendPage helper, and map new routes including /servers/:serverId.

--- a/public/home.html
+++ b/public/home.html
@@ -13,11 +13,11 @@
   </head>
   <body>
     <header class="topbar">
-      <a class="brand" href="./index.html">chitter</a>
+      <a class="brand" href="/">chitter</a>
       <nav class="topnav" aria-label="Primary">
-        <a href="./index.html">Landing</a>
-        <a class="active" href="./home.html">Home</a>
-        <a href="./server.html">Server</a>
+        <a href="/">Landing</a>
+        <a class="active" href="/home">Home</a>
+        <a href="/server">Server</a>
         <button id="logout-btn" class="btn btn-secondary" type="button">
           Logout
         </button>
