--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,10 @@
   </head>
   <body>
     <header class="topbar">
-      <a class="brand" href="./index.html">chitter</a>
+      <a class="brand" href="/">chitter</a>
       <nav class="topnav" aria-label="Primary">
-        <a href="./login.html">Login</a>
-        <a href="./home.html">Home</a>
+        <a href="/login">Login</a>
+        <a href="/home">Home</a>
       </nav>
     </header>
     <main class="landing">
@@ -27,8 +27,8 @@
           <strong>chitterapi.unboundlabs.dev</strong>.
         </p>
         <div class="actions">
-          <a class="btn" href="./login.html">Login with Discord</a>
-          <a class="btn btn-secondary" href="./home.html">Open Home</a>
+          <a class="btn" href="/login">Login with Discord</a>
+          <a class="btn btn-secondary" href="/home">Open Home</a>
         </div>
       </section>
     </main>
