--- a/public/server.html
+++ b/public/server.html
@@ -10,10 +10,10 @@
   </head>
   <body>
     <header class="topbar">
-      <a class="brand" href="./index.html">chitter</a>
+      <a class="brand" href="/">chitter</a>
       <nav class="topnav" aria-label="Primary">
-        <a href="./home.html">Home</a>
-        <a class="active" href="./server.html">Server</a>
+        <a href="/home">Home</a>
+        <a class="active" href="/server">Server</a>
       </nav>
     </header>
     <main class="server-layout">
