--- a/public/login.html
+++ b/public/login.html
@@ -13,10 +13,10 @@
   </head>
   <body>
     <header class="topbar">
-      <a class="brand" href="./index.html">chitter</a>
+      <a class="brand" href="/">chitter</a>
       <nav class="topnav" aria-label="Primary">
-        <a href="./index.html">Landing</a>
-        <a href="./home.html">Home</a>
+        <a href="/">Landing</a>
+        <a href="/home">Home</a>
       </nav>
     </header>
     <main class="login-main">
